--- a/Entrega1Gen/MvcApplication1/Views/Usuarios/Index.cshtml
+++ b/Entrega1Gen/MvcApplication1/Views/Usuarios/Index.cshtml
@@ -64,7 +64,7 @@
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
+                @Html.ActionLink("Details", "Details", new { id= item.Email /* id=item.PrimaryKey */ }) |
                 @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
             </td>
         </tr>
