--- a/Entrega1Gen/MvcApplication1/Views/Libreria/Index.cshtml
+++ b/Entrega1Gen/MvcApplication1/Views/Libreria/Index.cshtml
@@ -7,7 +7,7 @@
 
 
     <p>
-        @Html.ActionLink("Create New", "Create")
+        @Html.ActionLink("Create New", "CreateGratis")
     </p>
   @{/*  <table>
         <tr>
