--- a/Entrega1Gen/MvcApplication1/Views/Libreria/Details.cshtml
+++ b/Entrega1Gen/MvcApplication1/Views/Libreria/Details.cshtml
@@ -49,6 +49,7 @@
       
         @Html.ActionLink("Details", "Details", new {/* id=item.PrimaryKey */ }) |
         @Html.ActionLink("Edit", "Edit", new { id = Model.Id_libro /* id=Model.PrimaryKey */ }) |
+        @Html.ActionLink("Borrar", "Delete", new { id = Model.Id_libro /* id=Model.PrimaryKey */ }) |
         @Html.ActionLink("Back to List", "Index")
   
     </p>
