añado Mvc manu copia 26 DIC

--- a/Entrega1Gen/MvcApplication1/Views/Account/Register.cshtml
+++ b/Entrega1Gen/MvcApplication1/Views/Account/Register.cshtml
@@ -27,6 +27,24 @@
                 @Html.LabelFor(m => m.ConfirmPassword)
                 @Html.PasswordFor(m => m.ConfirmPassword)
             </li>
+            <li>
+                @Html.LabelFor(m => m.Email)
+                @Html.TextBoxFor(m => m.Email)
+          
+            </li>
+            <li>
+                @Html.LabelFor(m => m.Edad)
+                @Html.TextBoxFor(m => m.Edad)
+            </li>
+            <li>
+                @Html.LabelFor(m => m.Foto)
+                @Html.TextBoxFor(m => m.Foto)
+            </li>
+            <li>
+                @Html.LabelFor(m => m.Bibliografia)
+                @Html.TextBoxFor(m => m.Bibliografia)
+            </li>
+          
         </ol>
         <input type="submit" value="Registrarse" />
     </fieldset>
