--- a/Entrega1Gen/MvcApplication1/Views/Libreria/Details.cshtml
+++ b/Entrega1Gen/MvcApplication1/Views/Libreria/Details.cshtml
@@ -34,6 +34,11 @@
             <div class="display-field">
                 @Html.DisplayFor(model => model.Fecha)
             </div>
+
+        <div class="display-field">
+           
+            @Html.DisplayFor(model => model.Categoria.First().Nombre_categoria)
+        </div>
         <div class="display-field">
           
         
