--- a/Entrega1Gen/MvcApplication1/Views/Libreria/Edit.cshtml
+++ b/Entrega1Gen/MvcApplication1/Views/Libreria/Edit.cshtml
@@ -67,6 +67,10 @@
             @Html.ValidationMessageFor(model => model.numDen)
         </div>
 
+        <div>
+            @Html.Action("selectCategoria", "Categoria")
+        </div>
+
         <p>
             <input type="submit" value="Save" />
         </p>
