--- a/Entrega1Gen/MvcApplication1/Views/Libreria/CreateGratis.cshtml
+++ b/Entrega1Gen/MvcApplication1/Views/Libreria/CreateGratis.cshtml
@@ -1,4 +1,6 @@
-﻿@model MvcApplication1.Models.Libro
+﻿
+
+@model MvcApplication1.Models.Libro
 
 @{
     ViewBag.Title = "CreateGratis";
@@ -7,7 +9,8 @@
 
 <h2>CreateGratis</h2>
 
-@using (Html.BeginForm()) {
+@using (Html.BeginForm())
+{
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
 
@@ -39,14 +42,6 @@
         </div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.fecha)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.fecha)
-            @Html.ValidationMessageFor(model => model.fecha)
-        </div>
-
-        <div class="editor-label">
             @Html.LabelFor(model => model.publicado)
         </div>
         <div class="editor-field">
@@ -54,10 +49,9 @@
             @Html.ValidationMessageFor(model => model.publicado)
         </div>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.numDen)
+        <div>
+            @Html.Action("selectCategoria", "Categoria")
         </div>
-
         <p>
             <input type="submit" value="Create" />
         </p>
